fix: information icon alignment

--- a/packages/p2p/src/components/buy-sell/buy-sell-header.scss
+++ b/packages/p2p/src/components/buy-sell/buy-sell-header.scss
@@ -66,6 +66,7 @@
         }
 
         &__popover {
+            align-self: flex-end;
             margin-left: 0.4rem;
         }
 
